--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_library(periph_driv
-	src/LTC6813.cpp
+	src/LTC6813/LTC6813.cpp
+	src/LTC6813/PEC.cpp
 )
 
 target_include_directories(periph_driv PUBLIC
